--- a/NoticeBoardV3/bin/NoticeBoardV3.dll.config
+++ b/NoticeBoardV3/bin/NoticeBoardV3.dll.config
@@ -9,6 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="NoticeboardDatabase"
+        providerName="System.Data.SqlClient"
+        connectionString="Server=Slades_Laptop; Database=NoticeBoardV3; User ID=Test_NB_Project; password=test"/>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NoticeBoardV3-20180127035835.mdf;Initial Catalog=aspnet-NoticeBoardV3-20180127035835;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -78,6 +81,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="NoticeBoardV3.DAL.NoticeboardContext, NoticeBoardV3">
+        <databaseInitializer type="NoticeBoardV3.DAL.NoticeboardInitializer, NoticeBoardV3" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
