--- a/NoticeBoardV3/Web.config
+++ b/NoticeBoardV3/Web.config
@@ -9,8 +9,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NoticeboardDatabase" providerName="System.Data.SqlClient" connectionString="Server=Slades_Laptop; Database=NoticeBoardV3; User ID=Test_NB_Project; password=test" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NoticeBoardV3-20180127035835.mdf;Initial Catalog=aspnet-NoticeBoardV3-20180127035835;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add 
+        name="NoticeboardDatabase" 
+        providerName="System.Data.SqlClient" 
+        connectionString="Server=Slades_Laptop;
+        Database=NoticeBoardV3; 
+        User ID=Test_NB_Project; 
+        password=test" />
+    <add 
+      name="DefaultConnection" 
+      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NoticeBoardV3-20180127035835.mdf;Initial Catalog=aspnet-NoticeBoardV3-20180127035835;Integrated Security=True" 
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
