--- a/NoticeBoardV3/Web.config
+++ b/NoticeBoardV3/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="NoticeboardDatabase" providerName="System.Data.SqlClient" connectionString="Server=Slades_Laptop;&#xD;&#xA;        Database=NoticeBoardV3; &#xD;&#xA;        User ID=Test_NB_Project; &#xD;&#xA;        password=test" />
+    <add name="NoticeboardV3" providerName="System.Data.SqlClient" connectionString="Server=DESKTOP-R73Q4L5;        Database=NoticeBoardV3; &#xD;&#xA;        User ID=Test_NB_Project; &#xD;&#xA;        password=test" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NoticeBoardV3-20180127035835.mdf;Initial Catalog=aspnet-NoticeBoardV3-20180127035835;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
